--- a/Sixth-week/stylesheet.css
+++ b/Sixth-week/stylesheet.css
@@ -2,7 +2,6 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
-    list-style: none;
 }
 
 .body{
@@ -29,42 +28,42 @@
     flex-direction: column;
     align-items: center;
     text-align: center;
-    height: 84vh;
+    height: 85vh;
 }
 
 img{
     float: left;
 }
 
-.Frostpunk{
+.frostpunk{
     margin: 5px;
     padding: 5px;
     border: 2px solid black;
     background-color: rgb(50, 82, 245);
     width: 35vw;
-    height: 12vh;
+    height: 10vh;
     text-align: center;
     align-items: center;
 }
 
-.Hunt{
+.hunt{
     margin: 5px;
     padding: 5px;
     border: 2px solid black;
     background-color: rgb(227, 34, 34);
     width: 35vw;
-    height: 12vh;
+    height: 10vh;
     text-align: center;
     align-items: center;
 }
 
-.WoW{
+.wow{
     margin: 5px;
     padding: 5px;
     border: 2px solid black;
     background-color: rgb(238, 123, 42);
     width: 35vw;
-    height: 12vh;
+    height: 10vh;
     text-align: center;
     align-items: center;
 }
@@ -74,47 +73,47 @@ img{
     background-color: black;
     display: flex;
     flex-direction: column;
-    height: 10vh;
+    height: 8vh;
     align-items: center;
 }
 
 .input{
-    padding-left: 20px;
+    padding-left: 15px;
     background: url(https://toppng.com/uploads/preview/magnifying-glass-free-icon-magnifying-glass-icon-11562945594bjpcnqjfko.png) no-repeat left;
     background-size: 15px;
 }
 
-@media screen and (max-device-width: 1300px){
+@media screen and (max-device-width: 1130px){
     
-    .Frostpunk{
+    .frostpunk{
         margin: 5px;
         padding: 5px;
         border: 2px solid black;
         background-color: rgb(50, 82, 245);
         width: 90vw;
-        height: 15vh;
+        height: 12vh;
         text-align: center;
         align-items: center;
     }
     
-    .Hunt{
+    .hunt{
         margin: 5px;
         padding: 5px;
         border: 2px solid black;
         background-color: rgb(227, 34, 34);
         width: 90vw;
-        height: 15vh;
+        height: 12vh;
         text-align: center;
         align-items: center;
     }
     
-    .WoW{
+    .wow{
         margin: 5px;
         padding: 5px;
         border: 2px solid black;
         background-color: rgb(238, 123, 42);
         width: 90vw;
-        height: 15vh;
+        height: 12vh;
         text-align: center;
         align-items: center;
     }
